HUD: Flush ganesh before deleting texture

We should destroy the ScopeSkSurface before glDeleteTextures so
that ganesh flushes all GL commands. This bug manifests on OSX
with GPU raster, but not linux with GPU raster, presumably because
of different flushing behaviour.

Bug: 893655
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: I0f6ba26be026e0d33f6f665d24a40e19a3639d83
Reviewed-on: https://chromium-review.googlesource.com/c/1271783
Reviewed-by: Antoine Labour <piman@chromium.org>
Commit-Queue: Jonathan Backer <backer@chromium.org>
Cr-Commit-Position: refs/heads/master@{#598407}
Former-commit-id: 0010af1a4dbfb262fbbf84b46af72a347700ac2b